# ish

./: .travis.yml  meson_options.txt  xcode-meson.sh
.github/workflows/: ci.yml
app/: AppGroup.m  Roots.m
emu/: cpuid.h
